@@ -92,7 +92,17 @@ compileTestJava {
 
 test {
     useJUnitPlatform()
-    jvmArgs '-XX:+EnableDynamicAgentLoading'
+    jvmArgs '-XX:+EnableDynamicAgentLoading',
+            '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.glass.ui.mac=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+            '--add-opens=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
+            '--add-opens=javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.prism=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/javafx.scene.shape=ALL-UNNAMED'
 }
 
 dependencies {
@@ -239,6 +249,18 @@ test {
         jvmArgs = jvmArgsLinux
         systemProperty "java.library.path", file("${buildDir}/jni").absolutePath
     }
+    jvmArgs += [
+        '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+        '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+        '--add-opens=javafx.graphics/com.sun.glass.ui.mac=ALL-UNNAMED',
+        '--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+        '--add-opens=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
+        '--add-opens=javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
+        '--add-opens=javafx.graphics/com.sun.prism=ALL-UNNAMED',
+        '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+        '--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
+        '--add-opens=javafx.graphics/javafx.scene.shape=ALL-UNNAMED'
+    ]
 }
 
 tasks.named('distZip') {
